--- a/SomeName/SomeName.csproj
+++ b/SomeName/SomeName.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="Balance\DamageBalance.cs" />
     <Compile Include="Balance\DropBalance.cs" />
+    <Compile Include="Dice.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="FarmController.cs" />
     <Compile Include="Forms\Farm_Form.cs">
@@ -65,6 +66,7 @@
     <Compile Include="Forms\Main_Form.Designer.cs">
       <DependentUpon>Main_Form.cs</DependentUpon>
     </Compile>
+    <Compile Include="Items.Impl\Sword.cs" />
     <Compile Include="Items.Interfaces\Item.cs" />
     <Compile Include="Items.Interfaces\Weapon.cs" />
     <Compile Include="Forms\Menu_Form.cs">
