--- a/SomeName/SomeName.csproj
+++ b/SomeName/SomeName.csproj
@@ -51,7 +51,7 @@
     <Compile Include="Balance\DamageBalance.cs" />
     <Compile Include="Balance\DropBalance.cs" />
     <Compile Include="Dice.cs" />
-    <Compile Include="EquippedItems.cs" />
+    <Compile Include="Domain\EquippedItems.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="FarmController.cs" />
     <Compile Include="Forms\Farm_Form.cs">
@@ -71,7 +71,7 @@
     <Compile Include="Forms\Inventory_Form.Designer.cs">
       <DependentUpon>Inventory_Form.cs</DependentUpon>
     </Compile>
-    <Compile Include="ICanStart.cs" />
+    <Compile Include="Domain\ICanStart.cs" />
     <Compile Include="InventoryController.cs" />
     <Compile Include="Items.Impl\BeginnerSword.cs" />
     <Compile Include="Forms\Main_Form.cs">
@@ -94,16 +94,17 @@
     <Compile Include="Forms\Menu_Form.Designer.cs">
       <DependentUpon>Menu_Form.cs</DependentUpon>
     </Compile>
-    <Compile Include="Drop.cs" />
+    <Compile Include="Domain\Drop.cs" />
     <Compile Include="ItemType.cs" />
     <Compile Include="Monsters.Impl\MonsterFacture.cs" />
     <Compile Include="Monsters.Impl\SimpleMonster.cs" />
     <Compile Include="Monsters.Interfaces\Monster.cs" />
     <Compile Include="Exceptions\MonsterNotDeadException.cs" />
-    <Compile Include="Player.cs" />
+    <Compile Include="Domain\Player.cs" />
     <Compile Include="PlayerIO.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Domain\StatsInfo.cs" />
     <EmbeddedResource Include="Forms\Farm_Form.resx">
       <DependentUpon>Farm_Form.cs</DependentUpon>
     </EmbeddedResource>
