Добавил класс DropInfo + реализовал вывод информации о выпадающем дропе.

--- a/SomeName/SomeName.csproj
+++ b/SomeName/SomeName.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Balance\DamageBalance.cs" />
     <Compile Include="Balance\DropBalance.cs" />
     <Compile Include="Dice.cs" />
+    <Compile Include="Domain\DropInfo.cs" />
     <Compile Include="Domain\EquippedItems.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="FarmController.cs" />
@@ -59,11 +60,6 @@
     </Compile>
     <Compile Include="Forms\Farm_Form.Designer.cs">
       <DependentUpon>Farm_Form.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Forms\FormResources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>FormResources.resx</DependentUpon>
     </Compile>
     <Compile Include="Forms\Inventory_Form.cs">
       <SubType>Form</SubType>
@@ -108,10 +104,6 @@
     <EmbeddedResource Include="Forms\Farm_Form.resx">
       <DependentUpon>Farm_Form.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\FormResources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>FormResources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Inventory_Form.resx">
       <DependentUpon>Inventory_Form.cs</DependentUpon>
     </EmbeddedResource>
@@ -153,9 +145,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\weapon_bastard_sword_i00.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\PictureBoxBackground.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
