--- a/SomeName/SomeName.csproj
+++ b/SomeName/SomeName.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Dice.cs" />
     <Compile Include="Domain\DropInfo.cs" />
     <Compile Include="Domain\EquippedItems.cs" />
+    <Compile Include="Domain\WeaponBonuses.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="FarmController.cs" />
     <Compile Include="Forms\Farm_Form.cs">
