Добавил стат Vitality + MaxHealth + добавил их отображение на FarmFrom и InventoryForm.

--- a/SomeName/SomeName.csproj
+++ b/SomeName/SomeName.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="Balance\DamageBalance.cs" />
     <Compile Include="Balance\DropBalance.cs" />
+    <Compile Include="Balance\MonsterBalance.cs" />
     <Compile Include="Dice.cs" />
     <Compile Include="Domain\DropInfo.cs" />
     <Compile Include="Domain\EquippedItems.cs" />
