--- a/SomeName/SomeName.csproj
+++ b/SomeName/SomeName.csproj
@@ -53,6 +53,8 @@
     <Compile Include="Balance\DropBalance.cs" />
     <Compile Include="Balance\MonsterBalance.cs" />
     <Compile Include="Dice.cs" />
+    <Compile Include="Difficulties\BattleDifficulty.cs" />
+    <Compile Include="Difficulties\BattleDifficultyEnum.cs" />
     <Compile Include="Domain\DropInfo.cs" />
     <Compile Include="Domain\EquippedItems.cs" />
     <Compile Include="Domain\IAttackTarget.cs" />
