--- a/SomeName/SomeName.csproj
+++ b/SomeName/SomeName.csproj
@@ -50,7 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Balance\DamageBalance.cs" />
-    <Compile Include="Balance\DropFactory.cs" />
+    <Compile Include="Balance\DropService.cs" />
     <Compile Include="Balance\MonsterBalance.cs" />
     <Compile Include="Dice.cs" />
     <Compile Include="Difficulties\BattleDifficulty.cs" />
@@ -80,9 +80,9 @@
     </Compile>
     <Compile Include="Domain\ICanStart.cs" />
     <Compile Include="InventoryController.cs" />
-    <Compile Include="Items\Factories\ArmorFactory.cs" />
+    <Compile Include="Items\Factories\ChestFactory.cs" />
     <Compile Include="Items\Factories\ItemFactory.cs" />
-    <Compile Include="Items\Factories\SimpleArmorFactory.cs" />
+    <Compile Include="Items\Factories\SimpleChestFactory.cs" />
     <Compile Include="Items\Factories\SimpleSwordFactory.cs" />
     <Compile Include="Items\Factories\WeaponFactory.cs" />
     <Compile Include="Items\Impl\BeginnerSword.cs" />
@@ -92,9 +92,10 @@
     <Compile Include="Forms\Main_Form.Designer.cs">
       <DependentUpon>Main_Form.cs</DependentUpon>
     </Compile>
-    <Compile Include="Items\Impl\SimpleArmor.cs" />
+    <Compile Include="Items\Impl\SimpleChest.cs" />
     <Compile Include="Items\Impl\SimpleSword.cs" />
     <Compile Include="Items\Interfaces\Armor.cs" />
+    <Compile Include="Items\Interfaces\Chest.cs" />
     <Compile Include="Items\Interfaces\Item.cs" />
     <Compile Include="Items\Interfaces\Weapon.cs" />
     <Compile Include="Forms\Menu_Form.cs">
