--- a/SomeName/SomeName.csproj
+++ b/SomeName/SomeName.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Difficulties\BattleDifficulty.cs" />
     <Compile Include="Difficulties\BattleDifficultyEnum.cs" />
     <Compile Include="Domain\PlayerStatsCalculator.cs" />
+    <Compile Include="GameController.cs" />
     <Compile Include="Items\Bonuses\ArmorBonuses.cs" />
     <Compile Include="Domain\DropInfo.cs" />
     <Compile Include="Domain\EquippedItems.cs" />
