--- a/SomeName/SomeName.csproj
+++ b/SomeName/SomeName.csproj
@@ -126,6 +126,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Domain\StatsInfo.cs" />
+    <Compile Include="ShopService.cs" />
     <EmbeddedResource Include="Forms\Farm_Form.resx">
       <DependentUpon>Farm_Form.cs</DependentUpon>
     </EmbeddedResource>
