Вынес все зачарования в ForgeService + небольшие правки.

--- a/SomeName/SomeName.csproj
+++ b/SomeName/SomeName.csproj
@@ -65,8 +65,14 @@
     <Compile Include="Domain\AttackManager.cs" />
     <Compile Include="Domain\DropValue.cs" />
     <Compile Include="Domain\IAttacker.cs" />
+    <Compile Include="Domain\ICanBeEnhanted.cs" />
+    <Compile Include="Items\Impl\ScrollOfEnchantArmor.cs" />
+    <Compile Include="Items\Interfaces\IEquippment.cs" />
+    <Compile Include="Items\Interfaces\IItem.cs" />
     <Compile Include="Domain\PlayerStatsCalculator.cs" />
+    <Compile Include="EnchantManager.cs" />
     <Compile Include="ForgeController.cs" />
+    <Compile Include="ForgeService.cs" />
     <Compile Include="Forms\ForgeForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -148,7 +154,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Domain\StatsInfo.cs" />
-    <Compile Include="ShopService.cs" />
+    <Compile Include="ShopManager.cs" />
     <EmbeddedResource Include="Forms\FarmForm.resx">
       <DependentUpon>FarmForm.cs</DependentUpon>
     </EmbeddedResource>
