--- a/SomeName/SomeName.csproj
+++ b/SomeName/SomeName.csproj
@@ -156,6 +156,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Domain\StatsInfo.cs" />
     <Compile Include="ShopManager.cs" />
+    <Compile Include="ShopService.cs" />
     <EmbeddedResource Include="Forms\FarmForm.resx">
       <DependentUpon>FarmForm.cs</DependentUpon>
     </EmbeddedResource>
