--- a/SomeName/SomeName.csproj
+++ b/SomeName/SomeName.csproj
@@ -63,9 +63,12 @@
     <Compile Include="Dice.cs" />
     <Compile Include="Difficulties\BattleDifficulty.cs" />
     <Compile Include="Domain\AttackManager.cs" />
+    <Compile Include="Domain\BaseKoefValue.cs" />
     <Compile Include="Domain\DropValue.cs" />
     <Compile Include="Domain\IAttacker.cs" />
     <Compile Include="Domain\ICanBeEnchanted.cs" />
+    <Compile Include="Domain\IHaveMainStat.cs" />
+    <Compile Include="Domain\MainStat.cs" />
     <Compile Include="Items\Impl\ScrollOfEnchantArmor.cs" />
     <Compile Include="Items\Interfaces\IEquippment.cs" />
     <Compile Include="Items\Interfaces\IItem.cs" />
